# docs/swagger.json
@@ -1,13 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "petsminder 账户相关api",
+        "description": "账户相关api",
         "title": "账户相关api API接口文档",
         "contact": {},
         "version": "v1.0.1"
     },
     "paths": {
-        "/account/login": {
+        "/account/getUserInfo": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -15,15 +15,8 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "获取用户信息",
+                "summary": "GetAccountInfo 注册",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "请求参数",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "请求参数",
                         "name": "data",
@@ -44,7 +37,7 @@
                 }
             }
         },
-        "/api/v1/base/register": {
+        "/base/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -52,10 +45,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "account"
-                ],
-                "summary": "注册",
+                "summary": "Login 注册",
                 "parameters": [
                     {
                         "description": "请求参数",
@@ -63,18 +53,48 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.GetAccountInfoReq"
+                            "$ref": "#/definitions/request.LoginReq"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "请求参数",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/response.AccountInfo"
+                            "$ref": "#/definitions/response.LoginResp"
                         }
                     }
                 }
+            }
+        },
+        "/base/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Register 注册",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.RegisterReq"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         }
     },
@@ -84,8 +104,27 @@
             "properties": {
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "request.LoginReq": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
                 },
-                "name": {
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.RegisterReq": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -94,6 +133,14 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.LoginResp": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
