# example/gin/model/request/account.go
@@ -1,0 +1,9 @@
+package request
+
+type GetAccountInfoReq struct {
+	Id string `form:"id"`
+}
+type UpdateAccountReq struct {
+	Id   string `form:"id"`
+	Name string `form:"name"`
+}
