# example/gin/model/request/login.go
@@ -1,0 +1,10 @@
+package request
+
+type LoginReq struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+type RegisterReq struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
