# example/gin/model/response/account.go
@@ -1,0 +1,5 @@
+package response
+
+type AccountInfo struct {
+	Name string `json:"name"`
+}
