# example/gin/model/response/login.go
@@ -1,0 +1,5 @@
+package response
+
+type LoginResp struct {
+	Token string `json:"token"`
+}
